<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ir.elegam.amlakbashi.Activity.MainSearch">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />

    <Spinner
        android:id="@+id/spinner_amlak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:prompt="@string/amlak" />

    <Spinner
        android:id="@+id/spinner_mantaghe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_amlak"
        android:layout_margin="@dimen/_16sdp"
        android:prompt="@string/mantaghe" />

    <Spinner
        android:id="@+id/spinner_moamele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_amlak"
        android:layout_margin="@dimen/_16sdp"
        android:prompt="@string/moamele" />

    <Button
        android:id="@+id/btn_ok_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/search" />
</LinearLayout>
